# hf-application

./: .gitignore  README.md
problem_1/: .dockerignore  .gitignore  Dockerfile  README.md  main.py  pyproject.toml
problem_1/infrastructure/: api_gateway.tf  dynamo_receipt_table.tf  ecr_lambda_base.tf  iam_policy_application_access.tf  iam_policy_kinesis.tf  iam_policy_lambda_assume.tf  iam_policy_sqs.tf  iam_role_api.tf  iam_role_dead_letters.tf  iam_role_extract_data.tf  iam_role_process_receipt.tf  kinesis_streams.tf  lambda_api.tf  lambda_dead_letters.tf  lambda_extract_data.tf  lambda_process_receipt.tf  main.tf  network.tf  s3_bucket_receipt_data.tf  sqs_dead_letters.tf  terraform.tfvars  variables.tf  version.sh
problem_1/infrastructure/modules/networking/: main.tf  output.tf  variables.tf
problem_1/notebooks/: api_example.ipynb
problem_1/receipt_extractor/: api_handler.py  kinesis_handler.py  sqs_handler.py
problem_1/receipt_extractor/core/: receipt.py  receipt_service.py
problem_1/receipt_extractor/dynamodb/: receipt_repository.py
problem_1/receipt_extractor/kinesis/: receipt_message_service.py
problem_1/receipt_extractor/s3/: __init__.py  receipt_processing_service.py
problem_1/receipt_extractor/transformers/: receipt_extraction_service.py
problem_1/tests/receipt_extractor/: fixtures.py
problem_1/tests/receipt_extractor/dynamodb/: test_receipt_extraction_service.py  test_receipt_repository.py
problem_2/: README.md
problem_3/: Dockerfile  README.md  pyproject.toml
problem_3/my_project/: entrypoint.py
