[tool.poetry]
name = "receipt-extractor"
version = "1.0.1"
description = ""
authors = ["Matthew Alvarez <matt@mattjalvarez.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
boto3 = "^1.34.44"
pydantic = "^2.6.1"
transformers = "^4.37.2"
pydantic-core = "^2.16.2"
sentencepiece = "^0.2.0"
datasets = "^2.17.1"
pillow = "^10.2.0"
protobuf = "^4.25.3"
torch = "==2.1.2"


[tool.poetry.group.dev.dependencies]
testcontainers = "^3.7.1"
pytest = "^8.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
