[tool.poetry]
name = "my-project"
version = "0.0.1"
description = ""
authors = ["Matthew Alvarez <matt@mattjalvarez.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
boto3 = "^1.34.44"
transformers = "^4.37.2"
torch = "^2.1.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
